{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 20,
  "lineage": "bfad81c8-0dea-2116-ddc4-60446c5c17e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dove-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03657b56516ab7912",
            "arn": "arn:aws:ec2:us-east-2:587952148080:instance/i-0f3ac524d44463074",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f3ac524d44463074",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dovekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0659bb72efe5dae27",
            "private_dns": "ip-10-0-1-186.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.186",
            "public_dns": "ec2-3-138-175-1.us-east-2.compute.amazonaws.com",
            "public_ip": "3.138.175.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d55dce51f679d4ae",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0332cd54b60dd38fd",
            "tags": {
              "Name": "my-dove"
            },
            "tags_all": {
              "Name": "my-dove"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0217684a500faec6d"
            ]
          },
          "dependencies": [
            "aws_key_pair.dove-key",
            "aws_security_group.dove_stack_sg",
            "aws_subnet.dove-pub-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dove-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:587952148080:internet-gateway/igw-00f169e95cd5fe557",
            "id": "igw-00f169e95cd5fe557",
            "owner_id": "587952148080",
            "tags": {
              "Name": "dove-IGW"
            },
            "tags_all": {
              "Name": "dove-IGW"
            },
            "vpc_id": "vpc-0e402db391464a2c3"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dove-pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:587952148080:route-table/rtb-0fdf0cc25ec776c8a",
            "id": "rtb-0fdf0cc25ec776c8a",
            "owner_id": "587952148080",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00f169e95cd5fe557",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dove-pub-RT"
            },
            "tags_all": {
              "Name": "dove-pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e402db391464a2c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dove-pub-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cc2211854b1d37e",
            "route_table_id": "rtb-0fdf0cc25ec776c8a",
            "subnet_id": "subnet-0332cd54b60dd38fd"
          },
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_route_table.dove-pub-RT",
            "aws_subnet.dove-pub-1",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dove-pub-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4780feb7c77605d",
            "route_table_id": "rtb-0fdf0cc25ec776c8a",
            "subnet_id": "subnet-00e00f91dbc949458"
          },
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_route_table.dove-pub-RT",
            "aws_subnet.dove-pub-2",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dove-pub-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07aca7c2336fec977",
            "route_table_id": "rtb-0fdf0cc25ec776c8a",
            "subnet_id": "subnet-043d22105110f49ae"
          },
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_route_table.dove-pub-RT",
            "aws_subnet.dove-pub-3",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dove_stack_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:587952148080:security-group/sg-0217684a500faec6d",
            "description": "Sec Grp for dove ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0217684a500faec6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "183.83.67.89/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dove-stack-sg",
            "name_prefix": "",
            "owner_id": "587952148080",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "tags_all": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e402db391464a2c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:587952148080:subnet/subnet-03de8b9d01fa1f80f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03de8b9d01fa1f80f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "587952148080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-priv-1"
            },
            "tags_all": {
              "Name": "dove-priv-1"
            },
            "vpc_id": "vpc-0e402db391464a2c3"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:587952148080:subnet/subnet-0ad75e695448f2d57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad75e695448f2d57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "587952148080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-priv-2"
            },
            "tags_all": {
              "Name": "dove-priv-2"
            },
            "vpc_id": "vpc-0e402db391464a2c3"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-priv-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:587952148080:subnet/subnet-09a7f275f73e67ec7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a7f275f73e67ec7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "587952148080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-priv-3"
            },
            "tags_all": {
              "Name": "dove-priv-3"
            },
            "vpc_id": "vpc-0e402db391464a2c3"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:587952148080:subnet/subnet-0332cd54b60dd38fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0332cd54b60dd38fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "587952148080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-pub-1"
            },
            "tags_all": {
              "Name": "dove-pub-1"
            },
            "vpc_id": "vpc-0e402db391464a2c3"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:587952148080:subnet/subnet-00e00f91dbc949458",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e00f91dbc949458",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "587952148080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-pub-2"
            },
            "tags_all": {
              "Name": "dove-pub-2"
            },
            "vpc_id": "vpc-0e402db391464a2c3"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:587952148080:subnet/subnet-043d22105110f49ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043d22105110f49ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "587952148080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-pub-3"
            },
            "tags_all": {
              "Name": "dove-pub-3"
            },
            "vpc_id": "vpc-0e402db391464a2c3"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dove",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:587952148080:vpc/vpc-0e402db391464a2c3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07568c2e5a54527f8",
            "default_route_table_id": "rtb-06f22813fde4650e0",
            "default_security_group_id": "sg-0e06cadd75c942456",
            "dhcp_options_id": "dopt-0348d2551718495d5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e402db391464a2c3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06f22813fde4650e0",
            "owner_id": "587952148080",
            "tags": {
              "Name": "dove-vpc"
            },
            "tags_all": {
              "Name": "dove-vpc"
            }
          }
        }
      ]
    }
  ]
}